# CVM

./: .gitignore  CMakeLists.txt  README.md
include/: ast.hpp  compiler.hpp  lexer.hpp  opcodes.hpp  parser.hpp  repl.hpp  token.hpp  vm.hpp
src/: ast.cpp  compiler.cpp  lexer.cpp  main.cpp  opcodes.cpp  parser.cpp  repl.cpp  token.cpp  vm.cpp
tests/: calculator.cvm  test1.cvm  test2.cvm  test3.cvm  test4.cvm  test5.cvm  test6.cvm
